Fixes layout on small screen

--- a/src/app/team-member/team-member.component.scss
+++ b/src/app/team-member/team-member.component.scss
@@ -10,4 +10,7 @@
 ::ng-deep .btn-github svg { fill: #181717; }
 ::ng-deep .btn-linkedin svg { fill: #0077B5; }
 
-.team-avatar img { border-radius: 100%; }
+.team-avatar img {
+  border-radius: 100%;
+  max-width: 100%;
+}
